tests/syntax-error/src/HelloWorld.idr
mod ule HelloWorld

public export
hello : String
hello = "Goodbye, Mars!"

public export
version : String
version = "1.0.0"
